--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "path-to-regexp": "^5.0.0",
     "qs": "^6.9.1",
     "ua-parser-js": "^0.7.20",
-    "vue": "^2.6.12",
+    "vue": "^2.6.14",
     "vue-composable": "^1.0.0-beta.5",
     "vue-router": "^3.0.3",
+    "vue-waterfall-easy": "^2.4.4",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -71,7 +72,7 @@
     "svgo": "^1.3.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.14"
   },
   "engines": {
     "node": ">=8.9",
